fix: overflow:hidden

--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -656,6 +656,7 @@ samp {
   font-size: 13px;
   font-style: italic;
   color: #a3a3a3;
+  overflow: hidden;
   &:hover {
     color: @brand-primary;
   }
